--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "dependencies": {
-    "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
-    "@babel/preset-react": "^7.18.6",
     "@rails/webpacker": "5.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -10,6 +8,14 @@
     "webpack-cli": "3.3.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/eslint-parser": "^7.21.8",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
     "webpack-dev-server": "3"
   }
 }
