--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "dependencies": {
     "@babel/preset-env": "^7.21.5",
     "@rails/webpacker": "5.4.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
   },
